--- a/views/home.html
+++ b/views/home.html
@@ -25,19 +25,28 @@
 
     <header>
         <article class="header-top">
-            <img class="logo" src="/images/logo-mercado-liebre.svg" alt="logo">
-            <div>
+            <img class="logo1" src="/images/logo-mercado-liebre.svg" alt="logo">
+            <div class="buscador-mobile">
+                <input class="place-holder" type="search" name="busqueda" placeholder="Buscar productos, marcas">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+        </article>
+        <h2 class="cuotas1">
+            <i class="fa-solid fa-hand-holding-dollar"></i> Comprá en cuotas y sin tarjeta de crédito
+        </h2>
+
+        <article class="header-tres">
+            <img class="logo2" src="/images/logo-mercado-liebre.svg" alt="logo">
+            <div class="buscador-tablet-desktop">
                 <input class="place-holder" type="search" name="busqueda" placeholder="Buscar productos, marcas">
                 <div class="lupa">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
             </div>
+            <h2 class="cuotas2">
+                <i class="fa-solid fa-hand-holding-dollar"></i> Comprá en cuotas y sin tarjeta de crédito
+            </h2>
         </article>
-        <br>
-        <h2 class="cuotas">
-            <i class="fa-solid fa-hand-holding-dollar"></i> Comprá en cuotas y sin tarjeta de crédito
-        </h2>
-        <br>
 
         <nav>
             <ul>
@@ -46,7 +55,6 @@
                 <li type="none"> <a href=""> Vender </a> </li>
                 <li type="none"> <a href=""> Ayuda </a> </li>
             </ul>
-
             <ul>
                 <li type="none">
                     <a href=""> Creá tu cuenta </a>
@@ -60,7 +68,6 @@
                     <a href=""> Mis compras </a>
                     <i class="fa-sharp fa-solid fa-basket-shopping"></i>
                 </li>
-
             </ul>
         </nav>
 
@@ -114,7 +121,7 @@
                     <i class="fa-solid fa-truck"></i>
                     <p class="precio"> $23.200 </p>
                     <p class="descuentos"> 5% off </p>
-                    <h4> SmartTv Samsung 43" </h4>
+                    <h4> SmartTv Samsung 43 </h4>
                 </div>
             </article>
 
