--- a/views/home.html
+++ b/views/home.html
@@ -25,7 +25,9 @@
 
     <header>
         <article class="header-top">
-            <img class="logo1" src="/images/logo-mercado-liebre.svg" alt="logo">
+            <a href="/">
+                <img class="logo1" src="/images/logo-mercado-liebre.svg" alt="logo">
+            </a>
             <div class="buscador-mobile">
                 <input class="buscador" type="search" name="busqueda" placeholder="Buscar productos, marcas y más">
                 <i class="fa-solid fa-magnifying-glass"></i>
@@ -109,7 +111,7 @@
                     <i class="fa-solid fa-truck"></i>
                     <p class="precio"> $70.500 </p>
                     <p class="descuentos"> 10% off </p>
-                    <h4> Samsung Galaxy S10 </h4>
+                    <h4 id="description"> Samsung Galaxy S10 </h4>
                 </div>
             </article>
 
@@ -119,7 +121,7 @@
                     <i class="fa-solid fa-truck"></i>
                     <p class="precio"> $23.200 </p>
                     <p class="descuentos"> 5% off </p>
-                    <h4> SmartTv Samsung 43 </h4>
+                    <h4 id="description"> SmartTv Samsung 43 </h4>
                 </div>
             </article>
 
@@ -135,7 +137,7 @@
                     <i class="fa-solid fa-truck"></i>
                     <p class="precio"> $6.770 </p>
                     <p class="descuentos"> 40% off </p>
-                    <h4> Cafetera Moulinex </h4>
+                    <h4 id="description"> Cafetera Moulinex </h4>
                 </div>
             </article>
 
@@ -145,7 +147,7 @@
                     <i class="fa-solid fa-truck"></i>
                     <p class="precio"> $230.000 </p>
                     <p class="descuentos"> 20% off </p>
-                    <h4> MacBook Pro 2019 </h4>
+                    <h4 id="description"> MacBook Pro 2019 </h4>
                 </div>
             </article>
 
@@ -155,7 +157,7 @@
                     <i class="fa-solid fa-truck"></i>
                     <p class="precio"> $70.500 </p>
                     <p class="descuentos"> 10% off</p>
-                    <h4> Samsung Galaxy S10 </h4>
+                    <h4 id="description"> Samsung Galaxy S10 </h4>
                 </div>
             </article>
 
@@ -165,7 +167,7 @@
                     <i class="fa-solid fa-truck"></i>
                     <p class="precio"> $23.200 </p>
                     <p class="descuentos"> 5% off </p>
-                    <h4> SmartTv Samsung 43</h4>
+                    <h4 id="description"> SmartTv Samsung 43</h4>
                 </div>
             </article>
 
@@ -175,7 +177,6 @@
 
 
     <footer>
-
 
         <section class="footer">
             <article>
