--- a/views/register.html
+++ b/views/register.html
@@ -26,7 +26,9 @@
 
     <header>
         <article class="header-top">
-            <img class="logo1" src="/images/logo-mercado-liebre.svg" alt="logo">
+            <a href="/">
+                <img class="logo1" src="/images/logo-mercado-liebre.svg" alt="logo">
+            </a>
             <div class="buscador-mobile">
                 <input class="buscador" type="search" name="busqueda" placeholder="Buscar productos, marcas y más">
                 <i class="fa-solid fa-magnifying-glass"></i>
@@ -82,15 +84,18 @@
 
 
             <div class="solicitacion">
-                <input type="text" name="nombre" placeholder="Nombre y apellido" class="espacio" minlength="6" maxlength="20" required>
+                <input type="text" name="nombre" placeholder="Nombre y apellido" class="espacio" minlength="6"
+                    maxlength="20" required>
             </div>
 
             <div class="solicitacion">
-                <input type="text" name="nombreUsuario" placeholder="Nombre de usuario" class="espacio" minlength="6" maxlength="20" required>
+                <input type="text" name="nombreUsuario" placeholder="Nombre de usuario" class="espacio" minlength="6"
+                    maxlength="20" required>
             </div>
 
             <div class="solicitacion">
-                <input type="email" name="email" placeholder="E-mail" class="espacio" minlength="10" maxlength="20" required>
+                <input type="email" name="email" placeholder="E-mail" class="espacio" minlength="10" maxlength="20"
+                    required>
             </div>
 
 
@@ -103,7 +108,8 @@
 
 
             <div class="solicitacion">
-                <input type="text" name="domicilio" placeholder="Domicilio" class="espacio" minlength="3" maxlength="25" required>
+                <input type="text" name="domicilio" placeholder="Domicilio" class="espacio" minlength="3" maxlength="25"
+                    required>
             </div>
 
 
@@ -157,17 +163,20 @@
 
             <div class="solicitacion">
                 <label class="sub-titulos" for="fotoPerfil"> Elegí tu foto de usuario </label>
-                <input type="file" name="fotoPerfil" placeholder="Seleccionar archivo" enctype="multipart/form.data" class="archivo">
+                <input type="file" name="fotoPerfil" placeholder="Seleccionar archivo" enctype="multipart/form.data"
+                    class="archivo">
             </div>
 
 
             <div class="solicitacion">
-                <input type="password" name="contraseña" placeholder="Elegí tu contraseña" class="espacio" minlength="8" maxlength="20" required>
+                <input type="password" name="contraseña" placeholder="Elegí tu contraseña" class="espacio" minlength="8"
+                    maxlength="20" required>
             </div>
 
 
             <div class="solicitacion">
-                <input type="password" name="contraseña" placeholder="Confirmá tu contraseña" class="espacio" minlength="8" maxlength="20" required>
+                <input type="password" name="contraseña" placeholder="Confirmá tu contraseña" class="espacio"
+                    minlength="8" maxlength="20" required>
             </div>
 
             <div class="solicitacion">
