--- a/views/login.html
+++ b/views/login.html
@@ -26,7 +26,9 @@
 
     <header>
         <article class="header-top">
-            <img class="logo1" src="/images/logo-mercado-liebre.svg" alt="logo">
+            <a href="/">
+                <img class="logo1" src="/images/logo-mercado-liebre.svg" alt="logo">
+            </a>
             <div class="buscador-mobile">
                 <input class="buscador" type="search" name="busqueda" placeholder="Buscar productos, marcas y más">
                 <i class="fa-solid fa-magnifying-glass"></i>
@@ -90,7 +92,7 @@
             </div>
 
             <div class="solicitacion">
-                <button type="submit" class="boton1"> Enviar </button>
+                <button type="submit" class="boton"> Enviar </button>
             </div>
         </form>
     </main>
